--- a/src/styles.less
+++ b/src/styles.less
@@ -4,8 +4,16 @@
 
 .clearfix {
   zoom: 1;
-  &:before, &:after {display:table; content: ""; zoom: 1;}
-  &:after {clear: both;}
+
+  &:before, &:after {
+    display: table;
+    content: "";
+    zoom: 1;
+  }
+
+  &:after {
+    clear: both;
+  }
 }
 
 // .grad(@startColor: #555, @endColor: #333) {
@@ -20,7 +28,7 @@
 //   background-image: linear-gradient(top, @startColor, @endColor); // The standard
 // }
 
-body,html {
+body, html {
   min-height: 100%;
   font-family: circular, 'segoe ui', sans-serif;
   color: #222528 * 2;
@@ -34,8 +42,16 @@ section {
   padding: 50px;
   position: relative;
   color: @textDark;
-  p { color: @textLight; }
-  &.top-follow { padding-top: 0; margin-top: -30px; }
+
+  p {
+    color: @textLight;
+  }
+
+  &.top-follow {
+    padding-top: 0;
+    margin-top: -30px;
+  }
+
   &.wm {
     text-align: center;
     display: flex;
@@ -43,10 +59,12 @@ section {
     align-items: center;
     min-height: ~'calc(84vh - 100px)';
     color: white;
+
     &.dark-text {
       color: @textDark;
     }
   }
+
   @media (max-width: @mobileWidth) {
     padding: 30px 15px;
     &.wm {
@@ -60,34 +78,70 @@ h1 {
   margin-bottom: 15px;
   letter-spacing: -2px;
 }
-h2 { font-size: 24px;  margin-bottom: 15px; }
+
+h2 {
+  font-size: 24px;
+  margin-bottom: 15px;
+}
+
 h3, h4 {
   font-size: 1.5em;
   line-height: 1.25;
 }
-h4 {font-size: 1.25em;}
 
-h1,h2,h3,h4 {
+h4 {
+  font-size: 1.25em;
+}
+
+h1, h2, h3, h4 {
   font-weight: 400;
-  &.light { opacity: 0.65; }
-  &.strong { font-weight: 700; }
+
+  &.light {
+    opacity: 0.65;
+  }
+
+  &.strong {
+    font-weight: 700;
+  }
 }
+
 @media (max-width: @mobileWidth) {
-  h1 { font-size: 48px; }
-  h2 { font-size: 30px; }
-  h3 { font-size: 1.25em; }
+  h1 {
+    font-size: 48px;
+  }
+
+  h2 {
+    font-size: 30px;
+  }
+
+  h3 {
+    font-size: 1.25em;
+  }
 }
+
 hr {
-  height: 1px; margin: 0; margin-bottom: 40px;
-  background: fade(@textLight, 25%); border:none;
+  height: 1px;
+  margin: 0;
+  margin-bottom: 40px;
+  background: fade(@textLight, 25%);
+  border: none;
 }
+
 p {
   margin-bottom: 10px;
-  &.light { opacity: 0.65; }
-  &.big {font-size: 18px;}
+
+  &.light {
+    opacity: 0.65;
+  }
+
+  &.big {
+    font-size: 18px;
+  }
 }
 
-a {color: @blue;}
+a {
+  color: @blue;
+}
 
 ul.features {
   list-style: disc;
@@ -96,25 +150,43 @@ ul.features {
   line-height: 1.4;
   margin-bottom: 40px;
   color: @textLight;
-  li {margin-bottom: 8px;}
+
+  li {
+    margin-bottom: 8px;
+  }
+
   &.small {
     font-size: 90%;
     margin-bottom: 10px;
-    li {margin-bottom: 0;}
+
+    li {
+      margin-bottom: 0;
+    }
   }
 }
 
 .strikingly {
-  display:block; text-align: center;
+  display: block;
+  text-align: center;
   margin-bottom: 20px;
   background: #6a479e;
   border-radius: 100px;
   padding: 30px 20px;
   transition: all 0.1s;
-  &:hover {opacity: 0.75;}
-  img {max-width: 120px; position: relative; top: 2px;}
+
+  &:hover {
+    opacity: 0.75;
+  }
+
+  img {
+    max-width: 120px;
+    position: relative;
+    top: 2px;
+  }
+
   @media (max-width: @mobileWidth) {
-    display: block; text-align: center;
+    display: block;
+    text-align: center;
   }
 }
 
@@ -125,9 +197,14 @@ ul.features {
 
 
 @keyframes fadein {
-  0% { opacity: 0; }
-  100%   { opacity: 1; }
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
+
 canvas {
   display: block;
   animation: fadein 1s;
@@ -135,24 +212,35 @@ canvas {
 }
 
 .top-left, .top-right, .bottom-left {
-  position:absolute; top: 20px; left: 20px;
+  position: absolute;
+  top: 20px;
+  left: 20px;
   @media (max-width: @mobileWidth) {
     left: 15px;
   }
+
   a {
-    display: inline-block; padding: 10px;
-    color: inherit; font-size: 16px;
+    display: inline-block;
+    padding: 10px;
+    color: inherit;
+    font-size: 16px;
     text-decoration: none;
   }
 }
+
 .top-right {
-  left: auto; right: 30px;
+  left: auto;
+  right: 30px;
   @media (max-width: @mobileWidth) {
     right: 15px;
   }
 }
+
 .bottom-left {
-  top: auto; bottom: 10px; left: 10px; opacity: 0.4;
+  top: auto;
+  bottom: 10px;
+  left: 10px;
+  opacity: 0.4;
   font-size: 12px;
 }
 
@@ -171,7 +259,8 @@ canvas {
 
 .btn {
   color: inherit;
-  display: inline-block; margin-top: 20px;
+  display: inline-block;
+  margin-top: 20px;
   text-decoration: none;
   padding: 10px 15px;
   border-radius: 5px;
@@ -181,13 +270,17 @@ canvas {
   font-weight: bold;
   transition: all 0.1s;
   user-select: none;
+
   &:hover {
-    background: rgba(0,0,0,0.2);
-  };
+    background: rgba(0, 0, 0, 0.2);
+  }
+;
 }
 
 .arrow {
-  font-size: 200%; position: absolute; bottom: 40px;
+  font-size: 200%;
+  position: absolute;
+  bottom: 40px;
   opacity: 1;
   @media (max-width: @mobileWidth) {
     bottom: 20px;
@@ -220,11 +313,19 @@ canvas {
   }
 }*/
 
-.container { max-width: 1200px; }
+.container {
+  max-width: 1200px;
+}
+
 .inner {
-  position: relative; z-index: 1; text-align: left;
+  position: relative;
+  z-index: 1;
+  text-align: left;
   max-width: 1500px;
-  &.shadow {text-shadow: 0 5px 50px rgba(0,0,0,0.5);}
+
+  &.shadow {
+    text-shadow: 0 5px 50px rgba(0, 0, 0, 0.5);
+  }
 }
 
 .gallery {
@@ -239,29 +340,37 @@ canvas {
     transition: all 0.1s;
     background-size: cover;
     color: white;
-    text-shadow: 0 1px 8px rgba(0,0,0,0.3);
+    text-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
     text-transform: capitalize;
+
     &.birds, &.clouds, &.ripple, &.fog, &.globe {
       color: @textDark;
-      text-shadow: 0 1px 8px rgba(255,255,255,0.3);
+      text-shadow: 0 1px 8px rgba(255, 255, 255, 0.3);
     }
+
     &:hover {
-      opacity: 0.85; transform: scale(1.04);
+      opacity: 0.85;
+      transform: scale(1.04);
     }
+
     @media (max-width: @mobileWidth) {
       margin-bottom: 20px;
     }
   }
+
   .label {
     font-size: 32px;
     position: absolute;
-    top:50%; left: 50%;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
   }
+
   img {
     display: block;
-    max-width: 100%; border-radius: 3px;
+    max-width: 100%;
+    border-radius: 3px;
     transition: all 0.1s;
   }
 }
@@ -276,24 +385,33 @@ canvas {
   border-radius: 5px;
   color: @textDark;
   text-align: left;
-  box-shadow: 0 1px 10px rgba(0,0,0,0.2);
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
   z-index: 100 !important;
+
   .close-btn {
-    position: absolute; top: 0; right: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
     padding: 10px;
     text-decoration: none;
     color: @textDark;
     font-size: 20px;
     outline: none;
-    &:hover { opacity: 0.75; }
+
+    &:hover {
+      opacity: 0.75;
+    }
   }
+
   @media (max-width: @mobileWidth) {
     width: ~'calc(100% - 30px)';
     border-radius: 0;
-    top: 0; left: 0;
-    box-shadow: 0 20px 40px rgba(0,0,0,0.5);
+    top: 0;
+    left: 0;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.5);
   }
 }
+
 .usage {
   width: ~'calc(100%)';
   margin: 0 -15px -15px -15px;
@@ -305,12 +423,17 @@ canvas {
   line-height: 1.3;
   padding: 10px 15px;
   border-radius: 0 0 5px 5px;
-  background: #eef4f8; border-top: 1px solid rgba(0,0,0,0.15);
+  background: #eef4f8;
+  border-top: 1px solid rgba(0, 0, 0, 0.15);
   white-space: pre-wrap;
   word-wrap: break-word;
 
   color: #567;
-  strong, a { color: #345; }
+
+  strong, a {
+    color: #345;
+  }
+
   @media (max-width: @mobileWidth) {
     font-size: 15px;
   }
@@ -339,71 +462,111 @@ canvas {
   }
 }*/
 
-::-moz-selection { background: #6A479E * 1.4; color: white; }
-::selection { background: #6A479E * 1.4; color: white; }
+::-moz-selection {
+  background: #6A479E * 1.4;
+  color: white;
+}
+
+::selection {
+  background: #6A479E * 1.4;
+  color: white;
+}
 
 
 // Dat GUI
 
 .dg.main {
-  &, & * {font-family: inherit;}
+  &, & * {
+    font-family: inherit;
+  }
+
   text-shadow: none;
   color: @textDark;
   font-size: 16px;
   z-index: 1;
 }
+
 .dg .cr {
   border-left: none !important;
 }
+
 .dg li:not(.folder) {
   background: white;
   border-bottom: none;
   transition: all 0.1s;
 }
+
 .dg li:first-child {
   border-radius: 5px 5px 0 0;
 }
+
 .dg li:last-child {
   border-radius: 0 0 5px 5px
 }
+
 .dg .property-name {
-  width: 35%; margin-right: 5%;
+  width: 35%;
+  margin-right: 5%;
   font-size: 90%;
   text-align: right;
 }
+
 .dg .c .slider {
   background: #ddd;
-  &:hover {background: #ccc;}
+
+  &:hover {
+    background: #ccc;
+  }
 }
+
 .dg .c input[type=text] {
   text-shadow: none !important;
 }
+
 .dg .cr.boolean, .dg .cr.function {
-  &:hover {background: white;}
+  &:hover {
+    background: white;
+  }
 }
+
 .dg .cr.number input[type=text] {
   padding: 1px 3px;
   font-size: 14px;
   background: white;
   color: @textDark;
 }
+
 .dg .slider {
   // height: 21px;
 }
+
 .dg.main .close-button {
   display: none;
-/*  transition: all 0.1s;
-  padding: 5px 0;
-  background-color: #ddd;
-  border-radius: 0 0 5px 5px;
-  &:hover {
-    background: #eee;
-  }*/
+  /*  transition: all 0.1s;
+    padding: 5px 0;
+    background-color: #ddd;
+    border-radius: 0 0 5px 5px;
+    &:hover {
+      background: #eee;
+    }*/
 }
 
 // Stats
 
-#stats { position: absolute; top:0; left: 0 }
-#stats #fps { background: transparent !important }
-#stats #fps #fpsText { color: #fff !important }
-#stats #fps #fpsGraph { display: none }
+#stats {
+  position: absolute;
+  top: 0;
+  left: 0
+}
+
+#stats #fps {
+  background: transparent !important
+}
+
+#stats #fps #fpsText {
+  color: #fff !important
+}
+
+#stats #fps #fpsGraph {
+  display: none
+}
